--- a/templates/partials/settings/theme/style.html
+++ b/templates/partials/settings/theme/style.html
@@ -8,24 +8,24 @@
     --body-font-weight: {{or settings.bodyFontWeight 400}};
     --button-primary-color: {{or settings.buttonPrimaryColor '#2d5931'}};
     --button-primary-font-color: {{or settings.buttonPrimaryFontColor '#ffffff'}};
-    --button-secondary-color: {{or settings.buttonSecondaryColor '#b30044'}};
+    --button-secondary-color: {{or settings.buttonSecondaryColor '#4169E1'}};
     --button-secondary-font-color: {{or settings.buttonSecondaryFontColor '#ffffff'}};
     --chosen-fill: {{or settings.chosenFill '#ffffff'}};
-    --chosen-stroke: {{or settings.chosenStroke '#b30044'}};
+    --chosen-stroke: {{or settings.chosenStroke '#4169E1'}};
     --chosen-number: {{or settings.chosenNumber '#1f2834'}};
     --descriptor-label-font-color: {{or settings.descriptorLabelFontColor '#000000'}};
     --descriptor-label-font-size: {{or settings.descriptorLabelFontSize 14}}px;
     --descriptor-label-font-style: {{or settings.descriptorLabelFontStyle 'italic'}};
     --descriptor-label-font-weight: {{or settings.descriptorLabelFontWeight 700}};
     --descriptor-label-text-transform: {{or settings.descriptorLabelTextTransform 'none'}};
-    --die-rating-fill: {{or settings.dieRatingFill '#b30044'}};
-    --die-rating-stroke: {{or settings.dieRatingStroke '#b30044'}};
+    --die-rating-fill: {{or settings.dieRatingFill '#4169E1'}};
+    --die-rating-stroke: {{or settings.dieRatingStroke '#4169E1'}};
     --die-rating-number: {{or settings.dieRatingNumber '#ffffff'}};
     --effect-fill: {{or settings.effectFill '#2d5931'}};
     --effect-stroke: {{or settings.effectStroke '#2d5931'}};
     --effect-number: {{or settings.effectNumber '#ffffff'}};
     --hitch-fill: {{or settings.hitchFill '#141c27'}};
-    --hitch-stroke: {{or settings.hitchStroke '#b30044'}};
+    --hitch-stroke: {{or settings.hitchStroke '#4169E1'}};
     --hitch-number: {{or settings.hitchNumber '#ffffff'}};
     --input-background-color: {{or settings.inputBackgroundColor '#c9e2d1'}};
     --input-border-color: {{or settings.inputBorderColor '#2d5931'}};
@@ -33,7 +33,7 @@
     --input-border-width: {{or settings.inputBorderWidth '2'}}px;
     --input-border-style: {{or settings.inputBorderStyle 'solid'}};
     --input-checkbox-color: {{or settings.inputCheckboxColor '#2d5931'}};
-    --input-focus-color: {{or settings.inputFocusColor '#b30044'}};
+    --input-focus-color: {{or settings.inputFocusColor '#4169E1'}};
     --input-color: {{or settings.inputColor '#000000'}};
     --input-label-color: {{or settings.inputLabelColor '#424c59'}};
     --input-label-font-size: {{or settings.inputLabelFontSize 14}}px;
@@ -54,7 +54,7 @@
     --section-border-color: {{or settings.sectionBorderColor '#2d5931'}};
     --section-border-position: {{borderPosition settings.sectionBorderPosition settings.sectionBorderWidth}};
     --section-border-style: {{or settings.sectionBorderStyle 'solid'}};
-    --section-primary-title-font-color: {{or settings.sectionPrimaryTitleFontColor '#b30044'}};
+    --section-primary-title-font-color: {{or settings.sectionPrimaryTitleFontColor '#4169E1'}};
     --section-primary-title-font-size: {{or settings.sectionPrimaryTitleFontSize 19}}px;
     --section-primary-title-font-style: {{or settings.sectionPrimaryTitleFontStyle 'normal'}};
     --section-primary-title-font-weight: {{or settings.sectionPrimaryTitleFontWeight 700}};
@@ -65,12 +65,12 @@
     --section-secondary-title-font-weight: {{or settings.sectionSecondaryTitleFontWeight 700}};
     --section-secondary-title-text-transform: {{or settings.sectionSecondaryTitleTextTransform 'uppercase'}};
     --selected-fill: {{or settings.selectedFill '#c9e2d1'}};
-    --selected-stroke: {{or settings.selectedStroke '#b30044'}};
+    --selected-stroke: {{or settings.selectedStroke '#4169E1'}};
     --selected-number: {{or settings.selectedNumber '#141c27'}};
-    --separator-color: {{or settings.separatorColor '#b30044'}};
+    --separator-color: {{or settings.separatorColor '#4169E1'}};
     --separator-style: {{or settings.separatorStyle 'solid'}};
     --separator-weight: {{or settings.separatorWeight '2'}}px;
-    --sfx-bullet-color: {{or settings.sfxBulletColor '#b30044'}};
+    --sfx-bullet-color: {{or settings.sfxBulletColor '#4169E1'}};
     --sfx-label-font-color: {{or settings.sfxLabelFontColor '#2d5931'}};
     --sfx-label-font-size: {{or settings.sfxLabelFontSize 15}}px;
     --sfx-label-font-style: {{or settings.sfxLabelFontStyle 'italic'}};
@@ -87,7 +87,7 @@
     --sub-trait-label-font-style: {{or settings.subTraitLabelFontStyle 'normal'}};
     --sub-trait-label-font-weight: {{or settings.subTraitLabelFontWeight 700}};
     --sub-trait-label-text-transform: {{or settings.subTraitLabelTextTransform 'uppercase'}};
-    --trait-sub-title-font-color: {{or settings.traitSubTitleFontColor '#b30044'}};
+    --trait-sub-title-font-color: {{or settings.traitSubTitleFontColor '#4169E1'}};
     --trait-sub-title-font-size: {{or settings.traitSubTitleFontSize 15}}px;
     --trait-sub-title-font-style: {{or settings.traitSubTitleFontStyle 'italic'}};
     --trait-sub-title-font-weight: {{or settings.traitSubTitleFontWeight 700}};
