--- a/css/earthland.css
+++ b/css/earthland.css
@@ -6,7 +6,7 @@
 
 .rollable:hover, .rollable:focus {
   color: #000;
-  text-shadow: 0 0 10px red;
+  text-shadow: 0 0 10px blue;
   cursor: pointer;
 }
 
@@ -228,10 +228,10 @@
 }
 
 .die-rating-cpt .fill {
-  fill: var(--die-rating-fill, #b30044);
+  fill: var(--die-rating-fill, #4169E1);
 }
 .die-rating-cpt .stroke {
-  fill: var(--die-rating-stroke, #b30044);
+  fill: var(--die-rating-stroke, #4169E1);
 }
 .die-rating-cpt .number {
   color: var(--die-rating-number, #ffffff);
@@ -518,7 +518,7 @@ a[href] {
 }
 
 .ba-2-primary {
-  border: 2px solid #B30044;
+  border: 2px solid #4169E1;
 }
 
 .btn {
@@ -2000,8 +2000,8 @@ input[type=color][data-edit][data-edit] {
   color: var(--button-primary-font-color, #ffffff);
 }
 .dice-pool .btn:hover, .dice-pool .btn:focus {
-  -webkit-box-shadow: 0 0 5px var(--input-focus-color, #b30044);
-  box-shadow: 0 0 5px var(--input-focus-color, #b30044);
+  -webkit-box-shadow: 0 0 5px var(--input-focus-color, #4169E1);
+  box-shadow: 0 0 5px var(--input-focus-color, #4169E1);
 }
 .dice-pool .btn.btn-square-cpt {
   border-radius: 0;
@@ -2015,7 +2015,7 @@ input[type=color][data-edit][data-edit] {
   border-radius: 50%;
 }
 .dice-pool .btn-secondary-cpt {
-  background-color: var(--button-secondary-color, #b30044);
+  background-color: var(--button-secondary-color, #4169E1);
   color: var(--button-secondary-font-color, #ffffff);
 }
 .dice-pool .btn-icon-plain-cpt {
@@ -2060,16 +2060,16 @@ input[type=color][data-edit][data-edit] {
   fill: var(--chosen-fill, #ffffff);
 }
 .dice-pool .chosen-cpt .stroke {
-  fill: var(--chosen-stroke, #b30044);
+  fill: var(--chosen-stroke, #4169E1);
 }
 .dice-pool .chosen-cpt .number {
   color: var(--chosen-number, #1f2834);
 }
 .dice-pool .die-rating-cpt .fill {
-  fill: var(--die-rating-fill, #b30044);
+  fill: var(--die-rating-fill, #4169E1);
 }
 .dice-pool .die-rating-cpt .stroke {
-  fill: var(--die-rating-stroke, #b30044);
+  fill: var(--die-rating-stroke, #4169E1);
 }
 .dice-pool .die-rating-cpt .number {
   color: var(--die-rating-number, #ffffff);
@@ -2087,7 +2087,7 @@ input[type=color][data-edit][data-edit] {
   fill: var(--hitch-fill, #141c27);
 }
 .dice-pool .hitch-cpt .stroke {
-  fill: var(--hitch-stroke, #b30044);
+  fill: var(--hitch-stroke, #4169E1);
 }
 .dice-pool .hitch-cpt .number {
   color: var(--hitch-number, #ffffff);
@@ -2126,7 +2126,7 @@ input[type=color][data-edit][data-edit] {
   fill: var(--selected-fill, #c9e2d1);
 }
 .dice-pool .selected-cpt .stroke {
-  fill: var(--selected-stroke, #b30044);
+  fill: var(--selected-stroke, #4169E1);
 }
 .dice-pool .selected-cpt .number {
   color: var(--selected-number, #141c27);
@@ -2149,14 +2149,14 @@ input[type=color][data-edit][data-edit] {
 }
 .dice-pool .section-primary-title-cpt {
   border: 0;
-  color: var(--section-primary-title-font-color, #b30044);
+  color: var(--section-primary-title-font-color, #4169E1);
   font-size: var(--section-primary-title-font-size, 19px);
   font-style: var(--section-primary-title-font-style, normal);
   font-weight: var(--section-primary-title-font-weight, 700);
   text-transform: var(--section-primary-title-text-transform, uppercase);
 }
 .dice-pool .sfx-bullet-cpt {
-  color: var(--sfx-bullet-color, #b30044);
+  color: var(--sfx-bullet-color, #4169E1);
 }
 .dice-pool .sfx-label-cpt {
   color: var(--sfx-label-font-color, #2d5931);
@@ -2181,7 +2181,7 @@ input[type=color][data-edit][data-edit] {
   text-transform: var(--sub-trait-label-text-transform, uppercase);
 }
 .dice-pool .tab-cpt {
-  background-color: var(--button-secondary-color, #b30044);
+  background-color: var(--button-secondary-color, #4169E1);
   color: var(--button-secondary-font-color, #ffffff);
   line-height: 1;
   margin: 0 0.125rem 0.125rem;
@@ -2190,8 +2190,8 @@ input[type=color][data-edit][data-edit] {
 }
 .dice-pool .tab-cpt:hover, .dice-pool .tab-cpt:focus {
   text-shadow: none;
-  -webkit-box-shadow: 0 0 5px var(--input-focus-color, #b30044);
-  box-shadow: 0 0 5px var(--input-focus-color, #b30044);
+  -webkit-box-shadow: 0 0 5px var(--input-focus-color, #4169E1);
+  box-shadow: 0 0 5px var(--input-focus-color, #4169E1);
 }
 .dice-pool .tab-cpt.active {
   background-color: var(--button-primary-color, #2d5931);
@@ -2202,7 +2202,7 @@ input[type=color][data-edit][data-edit] {
   border-radius: 0.75rem 0.75rem 0 0;
 }
 .dice-pool .trait-sub-title-cpt {
-  color: var(--trait-sub-title-font-color, #b30044);
+  color: var(--trait-sub-title-font-color, #4169E1);
   font-size: var(--trait-sub-title-font-size, 15px);
   font-style: var(--trait-sub-title-font-style, italic);
   font-weight: var(--trait-sub-title-font-weight, 700);
@@ -2232,8 +2232,8 @@ input[type=color][data-edit][data-edit] {
   padding: 0.1875rem 0.375rem;
 }
 .dice-pool .input-cpt:focus, .dice-pool .color-picker input.color:focus {
-  -webkit-box-shadow: 0 0 5px var(--input-focus-color, #b30044);
-  box-shadow: 0 0 5px var(--input-focus-color, #b30044);
+  -webkit-box-shadow: 0 0 5px var(--input-focus-color, #4169E1);
+  box-shadow: 0 0 5px var(--input-focus-color, #4169E1);
 }
 .dice-pool .input-cpt option, .dice-pool .color-picker input.color option {
   color: black;
@@ -2265,7 +2265,7 @@ input[type=color][data-edit][data-edit] {
   user-select: none;
 }
 .dice-pool .checkmark-container:hover .input-checkbox-cpt ~ .checkmark-cpt {
-  background-color: var(--input-focus-color, #b30044);
+  background-color: var(--input-focus-color, #4169E1);
 }
 .dice-pool .checkmark-container .input-checkbox-cpt {
   cursor: pointer;
@@ -2318,7 +2318,7 @@ input[type=color][data-edit][data-edit] {
   margin-bottom: 0.25rem;
 }
 .dice-pool .separator-cpt {
-  border-bottom: var(--separator-weight, 2px) var(--separator-style, solid) var(--separator-color, #b30044);
+  border-bottom: var(--separator-weight, 2px) var(--separator-style, solid) var(--separator-color, #4169E1);
   width: 100%;
 }
 .dice-pool .editor {
@@ -2343,11 +2343,11 @@ input[type=color][data-edit][data-edit] {
   z-index: 3;
 }
 .dice-pool .dice-tag {
-  border: var(--separator-weight, 2px) var(--separator-style, solid) var(--separator-color, #b30044);
+  border: var(--separator-weight, 2px) var(--separator-style, solid) var(--separator-color, #4169E1);
 }
 
 .chat-message.roll-message {
-  border: var(--separator-weight, 2px) var(--separator-style, solid) var(--separator-color, #b30044);
+  border: var(--separator-weight, 2px) var(--separator-style, solid) var(--separator-color, #4169E1);
   border-radius: 0;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -2364,7 +2364,7 @@ input[type=color][data-edit][data-edit] {
 .chat-message.roll-message .message-header {
   background: transparent;
   border: 0;
-  border-color: var(--separator-color, #b30044);
+  border-color: var(--separator-color, #4169E1);
   border-style: var(--separator-style, solid);
   border-width: 0 0 var(--separator-weight, 2px) 0;
   -webkit-box-sizing: border-box;
@@ -2452,16 +2452,16 @@ input[type=color][data-edit][data-edit] {
   fill: var(--chosen-fill, #ffffff);
 }
 .earthland-character .chosen-cpt .stroke {
-  fill: var(--chosen-stroke, #b30044);
+  fill: var(--chosen-stroke, #4169E1);
 }
 .earthland-character .chosen-cpt .number {
   color: var(--chosen-number, #1f2834);
 }
 .earthland-character .die-rating-cpt .fill {
-  fill: var(--die-rating-fill, #b30044);
+  fill: var(--die-rating-fill, #4169E1);
 }
 .earthland-character .die-rating-cpt .stroke {
-  fill: var(--die-rating-stroke, #b30044);
+  fill: var(--die-rating-stroke, #4169E1);
 }
 .earthland-character .die-rating-cpt .number {
   color: var(--die-rating-number, #ffffff);
@@ -2479,7 +2479,7 @@ input[type=color][data-edit][data-edit] {
   fill: var(--hitch-fill, #141c27);
 }
 .earthland-character .hitch-cpt .stroke {
-  fill: var(--hitch-stroke, #b30044);
+  fill: var(--hitch-stroke, #4169E1);
 }
 .earthland-character .hitch-cpt .number {
   color: var(--hitch-number, #ffffff);
@@ -2518,7 +2518,7 @@ input[type=color][data-edit][data-edit] {
   fill: var(--selected-fill, #c9e2d1);
 }
 .earthland-character .selected-cpt .stroke {
-  fill: var(--selected-stroke, #b30044);
+  fill: var(--selected-stroke, #4169E1);
 }
 .earthland-character .selected-cpt .number {
   color: var(--selected-number, #141c27);
@@ -2541,14 +2541,14 @@ input[type=color][data-edit][data-edit] {
 }
 .earthland-character .section-primary-title-cpt {
   border: 0;
-  color: var(--section-primary-title-font-color, #b30044);
+  color: var(--section-primary-title-font-color, #4169E1);
   font-size: var(--section-primary-title-font-size, 19px);
   font-style: var(--section-primary-title-font-style, normal);
   font-weight: var(--section-primary-title-font-weight, 700);
   text-transform: var(--section-primary-title-text-transform, uppercase);
 }
 .earthland-character .sfx-bullet-cpt {
-  color: var(--sfx-bullet-color, #b30044);
+  color: var(--sfx-bullet-color, #4169E1);
 }
 .earthland-character .sfx-label-cpt {
   color: var(--sfx-label-font-color, #2d5931);
@@ -2573,7 +2573,7 @@ input[type=color][data-edit][data-edit] {
   text-transform: var(--sub-trait-label-text-transform, uppercase);
 }
 .earthland-character .tab-cpt {
-  background-color: var(--button-secondary-color, #b30044);
+  background-color: var(--button-secondary-color, #4169E1);
   color: var(--button-secondary-font-color, #ffffff);
   line-height: 1;
   margin: 0 0.125rem 0.125rem;
@@ -2582,8 +2582,8 @@ input[type=color][data-edit][data-edit] {
 }
 .earthland-character .tab-cpt:hover, .earthland-character .tab-cpt:focus {
   text-shadow: none;
-  -webkit-box-shadow: 0 0 5px var(--input-focus-color, #b30044);
-  box-shadow: 0 0 5px var(--input-focus-color, #b30044);
+  -webkit-box-shadow: 0 0 5px var(--input-focus-color, #4169E1);
+  box-shadow: 0 0 5px var(--input-focus-color, #4169E1);
 }
 .earthland-character .tab-cpt.active {
   background-color: var(--button-primary-color, #2d5931);
@@ -2594,7 +2594,7 @@ input[type=color][data-edit][data-edit] {
   border-radius: 0.75rem 0.75rem 0 0;
 }
 .earthland-character .trait-sub-title-cpt {
-  color: var(--trait-sub-title-font-color, #b30044);
+  color: var(--trait-sub-title-font-color, #4169E1);
   font-size: var(--trait-sub-title-font-size, 15px);
   font-style: var(--trait-sub-title-font-style, italic);
   font-weight: var(--trait-sub-title-font-weight, 700);
@@ -2624,8 +2624,8 @@ input[type=color][data-edit][data-edit] {
   padding: 0.1875rem 0.375rem;
 }
 .earthland-character .input-cpt:focus, .earthland-character .color-picker input.color:focus {
-  -webkit-box-shadow: 0 0 5px var(--input-focus-color, #b30044);
-  box-shadow: 0 0 5px var(--input-focus-color, #b30044);
+  -webkit-box-shadow: 0 0 5px var(--input-focus-color, #4169E1);
+  box-shadow: 0 0 5px var(--input-focus-color, #4169E1);
 }
 .earthland-character .input-cpt option, .earthland-character .color-picker input.color option {
   color: black;
@@ -2664,16 +2664,16 @@ input[type=color][data-edit][data-edit] {
   fill: var(--chosen-fill, #ffffff);
 }
 .earthland-item .chosen-cpt .stroke {
-  fill: var(--chosen-stroke, #b30044);
+  fill: var(--chosen-stroke, #4169E1);
 }
 .earthland-item .chosen-cpt .number {
   color: var(--chosen-number, #1f2834);
 }
 .earthland-item .die-rating-cpt .fill {
-  fill: var(--die-rating-fill, #b30044);
+  fill: var(--die-rating-fill, #4169E1);
 }
 .earthland-item .die-rating-cpt .stroke {
-  fill: var(--die-rating-stroke, #b30044);
+  fill: var(--die-rating-stroke, #4169E1);
 }
 .earthland-item .die-rating-cpt .number {
   color: var(--die-rating-number, #ffffff);
@@ -2691,7 +2691,7 @@ input[type=color][data-edit][data-edit] {
   fill: var(--hitch-fill, #141c27);
 }
 .earthland-item .hitch-cpt .stroke {
-  fill: var(--hitch-stroke, #b30044);
+  fill: var(--hitch-stroke, #4169E1);
 }
 .earthland-item .hitch-cpt .number {
   color: var(--hitch-number, #ffffff);
@@ -2730,7 +2730,7 @@ input[type=color][data-edit][data-edit] {
   fill: var(--selected-fill, #c9e2d1);
 }
 .earthland-item .selected-cpt .stroke {
-  fill: var(--selected-stroke, #b30044);
+  fill: var(--selected-stroke, #4169E1);
 }
 .earthland-item .selected-cpt .number {
   color: var(--selected-number, #141c27);
@@ -2753,14 +2753,14 @@ input[type=color][data-edit][data-edit] {
 }
 .earthland-item .section-primary-title-cpt {
   border: 0;
-  color: var(--section-primary-title-font-color, #b30044);
+  color: var(--section-primary-title-font-color, #4169E1);
   font-size: var(--section-primary-title-font-size, 19px);
   font-style: var(--section-primary-title-font-style, normal);
   font-weight: var(--section-primary-title-font-weight, 700);
   text-transform: var(--section-primary-title-text-transform, uppercase);
 }
 .earthland-item .sfx-bullet-cpt {
-  color: var(--sfx-bullet-color, #b30044);
+  color: var(--sfx-bullet-color, #4169E1);
 }
 .earthland-item .sfx-label-cpt {
   color: var(--sfx-label-font-color, #2d5931);
@@ -2785,7 +2785,7 @@ input[type=color][data-edit][data-edit] {
   text-transform: var(--sub-trait-label-text-transform, uppercase);
 }
 .earthland-item .tab-cpt {
-  background-color: var(--button-secondary-color, #b30044);
+  background-color: var(--button-secondary-color, #4169E1);
   color: var(--button-secondary-font-color, #ffffff);
   line-height: 1;
   margin: 0 0.125rem 0.125rem;
@@ -2794,8 +2794,8 @@ input[type=color][data-edit][data-edit] {
 }
 .earthland-item .tab-cpt:hover, .earthland-item .tab-cpt:focus {
   text-shadow: none;
-  -webkit-box-shadow: 0 0 5px var(--input-focus-color, #b30044);
-  box-shadow: 0 0 5px var(--input-focus-color, #b30044);
+  -webkit-box-shadow: 0 0 5px var(--input-focus-color, #4169E1);
+  box-shadow: 0 0 5px var(--input-focus-color, #4169E1);
 }
 .earthland-item .tab-cpt.active {
   background-color: var(--button-primary-color, #2d5931);
@@ -2806,7 +2806,7 @@ input[type=color][data-edit][data-edit] {
   border-radius: 0.75rem 0.75rem 0 0;
 }
 .earthland-item .trait-sub-title-cpt {
-  color: var(--trait-sub-title-font-color, #b30044);
+  color: var(--trait-sub-title-font-color, #4169E1);
   font-size: var(--trait-sub-title-font-size, 15px);
   font-style: var(--trait-sub-title-font-style, italic);
   font-weight: var(--trait-sub-title-font-weight, 700);
@@ -2836,8 +2836,8 @@ input[type=color][data-edit][data-edit] {
   padding: 0.1875rem 0.375rem;
 }
 .earthland-item .input-cpt:focus, .earthland-item .color-picker input.color:focus {
-  -webkit-box-shadow: 0 0 5px var(--input-focus-color, #b30044);
-  box-shadow: 0 0 5px var(--input-focus-color, #b30044);
+  -webkit-box-shadow: 0 0 5px var(--input-focus-color, #4169E1);
+  box-shadow: 0 0 5px var(--input-focus-color, #4169E1);
 }
 .earthland-item .input-cpt option, .earthland-item .color-picker input.color option {
   color: black;
