--- a/templates/other/dice-pool.html
+++ b/templates/other/dice-pool.html
@@ -3,7 +3,7 @@
   <div class="sheet-image"></div>
   <div class="sheet-content pa-2">
     <div class="section-cpt">
-      <div class="section-image">{{log 'pool name ' name}}</div>
+      <div class="section-image">{{log 'itemid ' itemid}}</div>
       <div class="section-content">
         <div class="relative-section pb-2 pt-0">
           <div class="section-background"></div>
@@ -11,17 +11,6 @@
           <div class="flex flex-ae">
             <div class="flex-col col-12">
               <div class="flex-row flex-ac">
-                {{#if draggable }}
-                  <div height="30px" width="30px">
-                    <ol class="items-list">
-                      {{#each items as |item id|}}
-                        <li class="item draggable flexrow" data-item-id="{{item._id}}">
-                          <i class="flex-col flex-g-1 fa-regular fa-hand fa-2xl"></i>
-                        </li>
-                      {{/each}}
-                    </ol>
-                  </div>
-                {{/if}}
                 <label class="flex-col flex-g-1">
                   <span class="input-label-cpt">{{localize 'Name'}}</span>
                   <input class="dice-pool-name input-cpt" name="name.value" type="text" value="{{name.value}}" />
@@ -118,9 +107,13 @@
         <div class="relative-section">
           <div class="section-background"></div>
           <div class="flex-col col-12 flex flex-je py-2">
-            {{#if name.value}}
+            {{#if (and name.value changed.value)}}
             <div class="flex-col">
-              <button class="make-dice-pool-item btn btn-secondary-cpt" type="button">{{localize 'MakeDraggable'}}</button>
+              {{#if (not itemid.value)}}
+                <button class="make-dice-pool-item btn btn-secondary-cpt" type="button">{{localize 'CreatePool'}}</button>
+              {{else}}
+                <button class="make-dice-pool-item btn btn-secondary-cpt" type="button">{{localize 'SavePool'}}</button>
+              {{/if}}
             </div>
             {{/if}}
             <div class="flex-col">
