Added a "roll all" button for damage or healing, though it still skips hitches and adds a d4 effect die

--- a/templates/other/dice-pool.html
+++ b/templates/other/dice-pool.html
@@ -120,6 +120,9 @@
               <button class="clear-dice-pool btn btn-secondary-cpt" type="button">{{localize 'Clear'}}</button>
             </div>
             <div class="flex-col pl-0">
+              <button class="roll-dice-pool roll-all btn btn-primary-cpt" type="button">{{localize 'RollAll'}}</button>
+            </div>
+            <div class="flex-col pl-0">
               <button class="roll-dice-pool btn btn-primary-cpt" type="button">{{localize 'RollAndSelect'}}</button>
             </div>
             <div class="flex-col pl-0">
