--- a/templates/partials/dice/dch.html
+++ b/templates/partials/dice/dch.html
@@ -1,6 +1,6 @@
 <div class="die-cpt d2-cpt {{type}}-cpt">
-  <svg viewBox="0 0 30 30" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" xmlns="http://www.w3.org/2000/svg">
-  <polygon points="14.934 1.4 19.106 10.288 28.434 11.713 21.684 18.632 23.277 28.4 14.934 23.788 6.59 28.4 8.184 18.632 1.434 11.713 10.763 10.288 14.934 1.4" style="stroke: rgb(218, 85, 85); fill: rgb(215, 170, 104);"/>
-</svg>
+  <svg id="eGXZu8YpJfK1" viewBox="0 0 30 30" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" xmlns="http://www.w3.org/2000/svg">
+    <ellipse rx="14" ry="14" style="fill: rgb(32, 178, 170); stroke: rgb(19, 108, 103);" cx="14.986" cy="14.986"/>
+  </svg>
   <div class="number">{{number}}</div>
 </div>
