--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -8,7 +8,7 @@
       {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
       use both the "grid" and "grid-Ncol" class where "N" can be any number
       from 1 to 12 and will create that number of columns.  --}}
-      <div class="resources grid grid-4col">
+      <div class="resources grid grid-3col">
 
         {{!-- "flex-group-center" is also defined in the _grid.scss file
         and it will add a small amount of padding, a border, and will
@@ -22,12 +22,6 @@
           </div>
         </div>
 
-        <div class="resource flex-group-center">
-          <label for="system.magic.value" class="resource-label">Magic Points</label>
-          <div class="resource-content flexrow flex-center flex-between">
-          <input type="text" name="system.magic.value" value="{{system.magic.value}}" data-dtype="Number"/>
-          </div>
-        </div>
         <div class="resource flex-group-center">
           <label for="system.energy.value" class="resource-label">Energy</label>
           <div class="resource-content flexrow flex-center flex-between">
@@ -44,8 +38,9 @@
           </div>
         </div>
 
+
       </div>
-      <div class="resources">
+      <div class="resources grid grid-2col">
         <div class="resource flex-group-left">
           <section class="grid grid-3col" style="width: 400px;">
             <div class="flex-col pr-0 flex-s-1">
@@ -57,6 +52,9 @@
               }}
             </div>
           </section>
+        </div>
+        <div class="resource flex-group-center">
+          {{> "systems/earthland/templates/partials/pp.html" magic=system.magic }}
         </div>
       </div>
     </div>
