--- a/templates/partials/plot-point.html
+++ b/templates/partials/plot-point.html
@@ -1,3 +1,3 @@
 <div class="pp-cpt{{ternary (eq size 'lg') ' pp-lg' ''}}">
-  <div class="pp-text-cpt">PP</div>
+  <div class="pp-text-cpt">MP</div>
 </div>
