--- a/templates/actor/parts/actor-header-npc-elite.html
+++ b/templates/actor/parts/actor-header-npc-elite.html
@@ -38,7 +38,7 @@
           edit=true
           selectName='system.armor_class'
         }}
-      </div>
+      </div><button title="Add to Dice-Pool" class="armor_class rollable small-button" data-rolltype="actor" data-roll="{{formulaFromObject system.armor_class.value}}" data-label="Armor Class" data-kind="Attribute"><i class="fas fa-dice-d20"></i></button>
     </section>
   </div>
 </div>
