--- a/templates/item/item-complication-sheet.html
+++ b/templates/item/item-complication-sheet.html
@@ -10,6 +10,7 @@
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description">Description</a>
     <a class="item" data-tab="attributes">Attributes</a>
+    <a class="item" data-tab="effects">Effects</a>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -44,5 +45,11 @@
 
     {{!-- Description Tab --}}
     {{> "systems/earthland/templates/item/parts/base.html"}}
+
+        {{!-- Active Effects Tab --}}
+    <div class="tab effects flexcol" data-group="primary" data-tab="effects">
+      {{> "systems/earthland/templates/item/parts/active-effects.html"}}
+    </div>
+
   </section>
 </form>
