--- a/templates/item/parts/magic.html
+++ b/templates/item/parts/magic.html
@@ -1,6 +1,6 @@
 <div class="magic">
   <div class="resource">
     <label class="resource-label">Special Effects</label>
-    <input type="text" name="system.sfx" value="{{system.sfx}}" data-dtype="String"/>
+    <textarea class="input-cpt" name="system.sfx">{{system.sfx}}</textarea>
   </div>
 </div>
