--- a/templates/other/status_conditions.html
+++ b/templates/other/status_conditions.html
@@ -35,6 +35,11 @@
               <button class="del-ff-complication btn btn-primary-cpt" type="button">{{localize 'RemoveStatus'}}</button>
             </div>
           </div>
+          <div class="resources grid grid-3col">
+            <div class="flex-col pr0 flex-s-1">
+              <button class="add-to-pool btn btn-primary-cpt" type="button">{{localize 'AddToPool'}}</button>
+            </div>
+          </div>
         </div>
         <div class="relative-section utilities">
           <div class="section-background"></div>
