--- a/templates/actor/parts/actor-features.html
+++ b/templates/actor/parts/actor-features.html
@@ -223,3 +223,33 @@
     {{/each}}
   </ol>
 </div>
+
+<div class="trait-group">
+  <h3>Feats</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-name">Action</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create Feat" data-type="ability-class"><i class="fas fa-plus"></i> Add Feat</a>
+      </div>
+    </li>
+    {{#each feats as |feat id|}}
+      <li class="item flexrow" data-item-id="{{feat._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{feat.img}}" title="{{feat.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{feat.name}}</h4>
+        </div>
+        <div class="item-name">
+          <button title="Use Feat (add to dice-pool)" class="usable small-button" data-usetype="actor" data-energycost="{{feat.system.energy_cost}}" data-mpcost="{{feat.system.mp_cost}}" data-label="{{feat.name}}" data-kind="feat" data-roll="{{formulaFromObject feat.system.dice.value}}"><i class="fa-solid fa-wand-sparkles"></i></button>
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
