--- a/templates/actor/parts/actor-equipment.html
+++ b/templates/actor/parts/actor-equipment.html
@@ -72,6 +72,43 @@
   </ol>
 </div>
 
+
+<div class="trait-group">
+  <h3>Ammunitions</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-name">Action</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create Ammunition" data-type="ammunition"><i class="fas fa-plus"></i> Add Ammunition</a>
+      </div>
+    </li>
+    {{#each ammunition as |ammo id|}}
+      <li class="item flexrow" data-item-id="{{ammo._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{ammo.img}}" title="{{ammo.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{ammo.name}}</h4>
+        </div>
+        <div class="item-name">
+          {{#if (or ammo.system.energy_cost ammo.system.mp_cost)}}
+            <button title="Use Ammunition Ability (add to dice-pool)" class="usable small-button" data-usetype="actor" data-energycost="{{ammo.system.energy_cost}}" data-mpcost="{{ammo.system.mp_cost}}" data-label="{{ammo.name}}" data-kind="spell" data-level="{{spellLevel}}" data-roll="{{formulaFromObject ammo.system.dice.value}}"><i class="fa-solid fa-wand-sparkles"></i></button>
+          {{else}}
+            {{#if ammo.system.dice}}
+              <button title="Add to Dice-Pool" class="role rollable small-button" data-rolltype="actor" data-roll="{{formulaFromObject ammo.system.dice.value}}" data-label="{{ammo.name}}" data-kind="ammo"><i class="fas fa-dice-d20"></i></button>
+            {{/if}}
+          {{/if}}
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
+
 <div class="trait-group">
   <h3>Armor</h3>
   <ol class="items-list">
@@ -196,7 +233,7 @@
         </div>
         <div class="item-name">
           {{#if (or gear.system.energy_cost gear.system.mp_cost)}}
-            <button title="Use Weapon Equipment (add to dice-pool)" class="usable small-button" data-usetype="actor" data-energycost="{{gear.system.energy_cost}}" data-mpcost="{{gear.system.mp_cost}}" data-label="{{gear.name}}" data-kind="spell" data-level="{{spellLevel}}" data-roll="{{formulaFromObject gear.system.dice.value}}"><i class="fa-solid fa-wand-sparkles"></i></button>
+            <button title="Use Equipment (add to dice-pool)" class="usable small-button" data-usetype="actor" data-energycost="{{gear.system.energy_cost}}" data-mpcost="{{gear.system.mp_cost}}" data-label="{{gear.name}}" data-kind="spell" data-level="{{spellLevel}}" data-roll="{{formulaFromObject gear.system.dice.value}}"><i class="fa-solid fa-wand-sparkles"></i></button>
           {{else}}
             {{#if gear.system.charge_cost}}
               <button title="Consume" class="role consumable small-button" data-id="{{gear._id}}" data-rolltype="actor" data-roll="{{formulaFromObject gear.system.dice.value}}" data-label="{{gear.name}}" data-kind="gear" data-chcost="{{gear.system.charge_cost}}" data-chcurrent="{{gear.system.current_charges}}"><i class="fa-solid fa-shield-halved"></i></button>
